--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+a {
+  text: #ffebee
+}
+
+div.container {
+  padding-top: 30px;
+}
+
+nav.level {
+  padding-top: 10px;
+}
